--- a/EducacionMundial.ipynb
+++ b/EducacionMundial.ipynb
@@ -5,7 +5,7 @@
    "id": "f7774350",
    "metadata": {},
    "source": [
-    "[![Imagen de Portada](https://drive.google.com/uc?export=view&id=1-CRv91I2BfO9VjtxIfghyJhkzPeqAaSp)\n",
+    "[![Imagen de Portada](imagen_portada_datos_educativos_globales.png)\n",
     "\n",
     "## Documentación del Dataset de Datos Educativos de la ONU\n",
     "### Descripción General\n",
