--- a/EducacionMundial.ipynb
+++ b/EducacionMundial.ipynb
@@ -5,7 +5,7 @@
    "id": "f7774350",
    "metadata": {},
    "source": [
-    "[![Imagen de Portada](imagen_portada_datos_educativos_globales.png)\n",
+    "[![Imagen de Portada](https://drive.google.com/uc?export=view&id=1-CRv91I2BfO9VjtxIfghyJhkzPeqAaSp)\n",
     "\n",
     "## Documentación del Dataset de Datos Educativos de la ONU\n",
     "### Descripción General\n",
@@ -5598,26 +5598,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 47,
-   "id": "e96492aa",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'data_barras' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[47], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# Convertir la columna 'Año' a tipo string\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m data_barras[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mAño\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m=\u001b[39m \u001b[43mdata_barras\u001b[49m[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mAño\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39mastype(\u001b[38;5;28mstr\u001b[39m)\n\u001b[0;32m      4\u001b[0m \u001b[38;5;66;03m# Crear el gráfico de barras\u001b[39;00m\n\u001b[0;32m      5\u001b[0m plt\u001b[38;5;241m.\u001b[39mfigure(figsize\u001b[38;5;241m=\u001b[39m(\u001b[38;5;241m12\u001b[39m, \u001b[38;5;241m6\u001b[39m))\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'data_barras' is not defined"
-     ]
-    }
-   ],
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "a5f1a063",
    "metadata": {},
@@ -5630,4 +5610,43 @@
     "\n",
     "**Apreciamos su interés y apoyo continuo. ¡Esperamos presentarles estas emocionantes mejoras muy pronto**"
    ]
- 
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "31f36d0f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1e4f2d69",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.18"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 5
+}
