--- a/EducacionMundial.ipynb
+++ b/EducacionMundial.ipynb
@@ -5608,7 +5608,4 @@
     "\n",
     "**Recomendamos a todos los interesados mantenerse al tanto de las futuras actualizaciones de este dataset y las correspondientes mejoras en la herramienta. Nuestro objetivo es mejorar continuamente la accesibilidad y la utilidad de estos datos, proporcionando medios innovadores para su exploración y análisis.**\n",
     "\n",
-    "**Apreciamos su interés y apoyo continuo. ¡Esperamos presentarles estas emocionantes mejoras muy pronto**"
-]
-  }
-   
+    "**Apreciamos su interés y apoyo continuo. ¡Esperamos presentarles estas emocionantes mejoras muy pronto**
