--- a/EducacionMundial.ipynb
+++ b/EducacionMundial.ipynb
@@ -5,7 +5,7 @@
    "id": "f7774350",
    "metadata": {},
    "source": [
-    "[![Imagen de Portada](imagen_portada_datos_educativos_globales.png)\n",
+    "[![Imagen de Portada](https://drive.google.com/uc?export=view&id=1-CRv91I2BfO9VjtxIfghyJhkzPeqAaSp)\n",
     "\n",
     "## Documentación del Dataset de Datos Educativos de la ONU\n",
     "### Descripción General\n",
@@ -5608,4 +5608,45 @@
     "\n",
     "**Recomendamos a todos los interesados mantenerse al tanto de las futuras actualizaciones de este dataset y las correspondientes mejoras en la herramienta. Nuestro objetivo es mejorar continuamente la accesibilidad y la utilidad de estos datos, proporcionando medios innovadores para su exploración y análisis.**\n",
     "\n",
-    "**Apreciamos su interés y apoyo continuo. ¡Esperamos presentarles estas emocionantes mejoras muy pronto**
+    "**Apreciamos su interés y apoyo continuo. ¡Esperamos presentarles estas emocionantes mejoras muy pronto**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "31f36d0f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1e4f2d69",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.18"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 5
+}
